--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "timeless",
-  "version": "0.1.0",
+  "name": "Paperfly Digital",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
