--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paperflydigital",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,21 +11,21 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^12.4.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "moment": "^2.30.1",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-fast-marquee": "^1.6.4",
+    "next": "^15.1.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-outside-click-handler": "^1.3.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6"
   }
 }
