--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "classnames": "^2.5.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.4.2",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "moment": "^2.30.1",
     "next": "^15.1.6",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
